# hand_visibility_detector

./: .gitignore  README.md  demo.py  demo_gradio.py  demo_video.py  pyproject.toml
src/hand_visibility_detector/: __init__.py  hub.py  pipeline.py  rotations.py  transforms.py  visibility_net.py  visualization.py
src/hand_visibility_detector/backbones/: __init__.py  cspnext.py  hamer.py  hamer_vit.py  resnet.py  vit.py
training/: augmentation.py  dataset.py  evaluate.py  model.py  train.py
training/configs/: coco.yaml  coco_eval.yaml  hint.yaml  hint_eval.yaml
training/yolo_finetune/: README.md  evaluate.py  prepare_dataset.py  train.py
